# M3u8Downloader

./: CMakeLists.txt  M3u8Downloader.sln  M3u8Downloader.vcxproj
doc/: 结构体信息.txt
script/: compile.bat
sdk/win/lib/: findall.lib
src/M3u8Downloader/: CM3u8Download.cpp  CM3u8Download.h  CMakeLists.txt  CMovieDownloadBase.cpp  CMovieDownloadBase.h  M3u8Downloader.cpp  M3u8Downloader.cpp.rej  M3u8Downloader.vcxproj  M3u8Downloader.vcxproj.filters  log.cpp  utils.cpp  utils.h
src/TestM3u8Downloader/: CM3u8Download.cpp  CM3u8Download.h  CMakeLists.txt  CMovieDownloadBase.cpp  CMovieDownloadBase.h  M3u8Downloader.cpp  M3u8Downloader.vcproj  M3u8Downloader.vcxproj  M3u8Downloader.vcxproj.filters  M3u8DownloaderHook.cpp  M3u8DownloaderHook.h  TestM3u8Downloader.vcxproj  TestM3u8Downloader.vcxproj.filters  hook.h  hook.hpp  hookmiddle.h  log.cpp  log.h  log.txt  main.cpp  netlib.h  regex.h  utils.cpp  utils.h
src/TestM3u8Downloader/x64/Debug/: BuildLog.htm  vc90.idb
third/M3u8Downloader/: libM3u8downloader.dylib  libM3u8downloader.dylib.i64
third/M3u8Downloader/backup/: CM3u8Download.cpp  CMovieDownloadBase.cpp  CMovieDownloadBase.h  M3u8Downloader.cpp  utils.cpp
third/testDownloader/: 1.mp4.ds  M3u8Downloader.ilk  log.txt
third/win/curl/: CONTROL
third/win/curl/include/curl/: curl.h
third/win/curl/lib/: libcurl.lib  zlib.lib
third/win/curl/lib/pkgconfig/: libcurl.pc
third/win/curl/share/curl/: vcpkg_abi_info.txt
third/win/polarssl/lib/: polarssl.lib
workspace/: M3u8Downloader.sln
workspace/vs2008/: M3u8Downloader.sln  UpgradeLog.htm
(+10 files in other folders)
